[package]
name = "rampon_anchor"
version = "0.4.0"
edition = "2021"
authors = ["Rogerio Goncalves <rogerlz@gmail.com>"]

[dependencies]
anchor = { git = "https://github.com/Annex-engineering/anchor" }
rp2040-hal = "0.8.0"
rp-pico = { version = "0.7.0", default-features = false, features = ["rt", "critical-section-impl", "rom-func-cache"] }
rp2040-boot2 = "=0.2.1"
panic-halt = "*"
cortex-m-rt = "0.7.3"
cortex-m = "0.7.7"
embedded-hal = "0.2.7"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
fugit = "0.3"

[build-dependencies]
anchor_codegen = { git = "https://github.com/Annex-engineering/anchor" }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[features]
default = ["kusba"]
kusba = []
fpis = []
mnadxl = []
is25lp = []
